# ziplib

./: CMakeLists.txt  Makefile  ZipLib.sln  build_windows.bat
Source/Sample/: Sample.vcxproj
Source/ZipLib/: CMakeLists.txt  ZipArchive.h  ZipFile.cpp  ZipFile.h  ZipLib.vcxproj  ZipLib.vcxproj.filters
Source/ZipLib/extlibs/bzip2/: CMakeLists.txt  bzip2.vcxproj
Source/ZipLib/extlibs/lzma/: CMakeLists.txt  Types.h  lzma.vcxproj
Source/ZipLib/extlibs/zlib/: CMakeLists.txt  zlib.vcxproj
